    introduced in Linux 5.14.
  * Enhanced prctl syscall decoding.
  * Enhanced decoding of IFLA_* netlink attributes.
  * Enhanced decoding of MDBA_ROUTER_PATTR_* mdb router port netlink attributes.
  * Updated lists of BPF_*, IORING_*, MADV_*, MOUNT_ATTR_*, SCTP_*,
    and UFFD_* constants.
  * Updated lists of ioctl commands from Linux 5.14.

* Bug fixes
  * Fixed build using bionic libc.

Noteworthy changes in release 5.13 (2021-07-18)
===============================================

* Improvements
  * Print netlink data in a more structured way.
  * Implemented decoding of NT_PRSTATUS and NT_FPREGSET regsets
    of PTRACE_GETREGSET and PTRACE_SETREGSET requests.
  * Implemented decoding of regs argument of PTRACE_GETREGS, PTRACE_GETREGS64,
    PTRACE_SETREGS, PTRACE_SETREGS64, PTRACE_GETFPREGS, and PTRACE_SETFPREGS
    requests.
  * Implemented powerpc System Call Vectored ABI support.
  * Implemented decoding of landlock_add_rule, landlock_create_ruleset,
    and landlock_restrict_self syscalls introduced in Linux 5.13.
  * Enhanced decoding of perf_event_open syscall.
  * Updated lists of BPF_*, IORING_*, KEXEC_*, KEY_*, KVM_*, NT_*, PR_*,
    PTRACE_*, RTM_*, RTPROT_*, TRAP_*, UFFD_*, UFFDIO_*, and V4L2_* constants.
  * Updated lists of ioctl commands from Linux 5.13.

* Portability
  * On powerpc and powerpc64, linux kernel >= 2.6.23 is required.
    Older versions without a decent PTRACE_GETREGS support will not work.

Noteworthy changes in release 5.12 (2021-04-26)
===============================================

* Improvements
  * Implemented --secontext[=full] option to display SELinux contexts.
  * Implemented decoding of mount_setattr syscall introduced in Linux 5.12.
  * Updated decoding of IFLA_BRPORT_* netlink attributes to match Linux 5.12.
  * Updated lists of DEVCONF_*, IORING_*, KVM_*, MPOL_*, MTD_*, NFT_MSG_*,
    RESOLVE_*, RTM_*, ST_*, and V4L2_* constants.
  * Updated lists of ioctl commands from Linux 5.12.

* Bug fixes